# lumix

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
docs/: routing_penalty_experiment.md
docs/adr/: 0001-v1-uses-2d-effective-index.md  0002-forward-transfer-fit-with-optional-reflection-penalty.md  0003-v1-includes-explicit-inverse-design-runner.md  0015-port-tapers-are-explicit-in-v1.md  (+13 more)
experiments/: .gitignore  README.md  __init__.py
notebooks/: imagenette_repeated_encoding_lumix.ipynb
scripts/: benchmark_imagenette_mlp.py  benchmark_mnist_nonlinearity.py  benchmark_mnist_paper_style.py  benchmark_mnist_pca_depth_curve.py  benchmark_mnist_pca_objectives.py  benchmark_mnist_pca_phase.py  benchmark_mnist_pca_ridge_readout.py  benchmark_mnist_pca_three_way_depth_curve.py  benchmark_mnist_pca_tied_affine_depth_curve.py  benchmark_mnist_pca_tied_three_way_depth_curve.py  benchmark_williamson_vs_tied.py  run_imagenette_adaptive_iteration.py
tests/: test_blocks.py  test_clements_convert.py  test_dense_linear.py  test_encoding.py  test_experiment_scaffold.py  test_gan_monitoring.py  test_imagenette_aa_bb_sharing.py  test_imagenette_ab_aa_sharing.py  test_imagenette_abc_a_sharing.py  test_imagenette_adaptive_runner.py  test_imagenette_insertion_loss_range.py  test_imagenette_palindrome_sharing.py  test_imagenette_phase_offset.py  test_inverse_design.py  test_local_mesh_routing.py  test_metrics.py  test_photonforge_lumix_layout.py  test_ridge.py  test_routing.py  test_smoke.py  test_spm.py  test_training_algorithms.py  test_waveguide.py  test_williamson.py
(+81 files in other folders)
