[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumix"
version = "0.1.0"
description = "Optical neural network layers for JAX and Flax"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "azka" }
]
dependencies = [
  "flax>=0.11.0",
  "jax>=0.7.0",
  "optax>=0.2.5",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
tutorial = [
  "ipykernel>=6.0.0",
  "matplotlib>=3.10.0",
  "nbconvert>=7.0.0",
  "pillow>=12.0.0",
  "tqdm>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lumix"]
