[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumix"
version = "0.1.0"
description = "Optical neural network layers for JAX and Flax"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "azka" }
]
dependencies = [
  "flax>=0.11.0",
  "jax>=0.7.0",
  "optax>=0.2.5",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
tidy3d = [
  "gdstk>=0.9.60",
  "photonforge[live-viewer]>=1.1.7",
  "tidy3d[trimesh]==2.8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lumix"]
